--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@
                 body: JSON.stringify({ username, email, password, fullName, phoneNumber, dateOfBirth, country })
             });
             const data = await response.json();
-            alert(data.message); // Display response message
+            alert(data.message); // Display response messageasd
         } catch (error) {
             console.error('Error:', error);
         }
@@ -153,3 +153,7 @@
 
 </body>
 </html>
+
+
+
+
